--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
         <p>
           With the forgotten arts restored, Jenna Miles and Kody Bishop return from their online classroom with the information necessary to save their people and restore freedom to the galaxy....
         </p>
-        <p>
+        <p style="text-align: center; text-transform: uppercase;">
           Congratulations!
         </p>
       </div>
     </div>
   </div>
+
   <script type="text/javascript" src="dist.js"></script>
-  <script type="text/javascript">
-    
-  </script>
+
 </body>
